# stock-logistics-barcode

./: .copier-answers.yml  .pre-commit-config.yaml  README.md
barcodes_generator_abstract/: README.rst
barcodes_generator_abstract/static/description/: index.html
barcodes_generator_product/: README.rst
barcodes_generator_product/static/description/: index.html
setup/_metapackage/: pyproject.toml
stock_barcodes/i18n/: tr.po
stock_picking_product_barcode_report/: README.rst
stock_picking_product_barcode_report/report/: report_label_barcode_quant_package_template.xml  report_label_barcode_template.xml
stock_picking_product_barcode_report/static/description/: index.html
